fixed header size, was too big in mobile version

--- a/technical.css
+++ b/technical.css
@@ -95,6 +95,9 @@ code {
     }
 }
 @media only screen and (max-width: 800px) {
+    h1 {
+        font-size: 2em;
+    }
     img {
         width:100%
     }
@@ -104,5 +107,6 @@ code {
     }
 }
 @media only screen and (max-width: 450px) {
-  
+    h1 {
+        font-size: 1.2em;
 }
